--- a/2025-02-25/django/store/pyproject.toml
+++ b/2025-02-25/django/store/pyproject.toml
@@ -8,6 +8,8 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.12"
 django = "^5.1.6"
+psycopg = "^3.2.5"
+djangorestframework = "^3.15.2"
 
 
 [build-system]
