--- a/2025-02-27/store/pyproject.toml
+++ b/2025-02-27/store/pyproject.toml
@@ -10,6 +10,10 @@ python = "^3.12"
 django = "^5.1.6"
 djangorestframework = "^3.15.2"
 pygments = "^2.19.1"
+django-environ = "^0.12.0"
+django-environs = "^0.1.1"
+psycopg = "^3.2.5"
+django-cors-headers = "^4.7.0"
 
 
 [build-system]
